infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grandiosoft-web
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: grandiosoft-web
  template:
    metadata:
      labels:
        app: grandiosoft-web
    spec:
      containers:
      - name: web
        image: rarebreedxx/grandiosoft-website:31
        ports:
        - containerPort: 80

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5

        resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
