infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grandiosoft-service
spec:
  type: NodePort
  selector:
    app: grandiosoft-web
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
